--- a/gitops-manifests.yaml
+++ b/gitops-manifests.yaml
@@ -1,5 +1,3 @@
-PR id: #10
-
 ---
 apiVersion: v1
 kind: Namespace
@@ -53,7 +51,7 @@ spec:
           type: ClusterIP
 
     repoURL: https://charts.bitnami.com/bitnami
-    targetRevision: 21.0.*
+    targetRevision: "*"
   syncPolicy:
     automated:
       prune: true
